apps/mi-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mi-app.172.18.194.171.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mi-app
                port:
                  number: 80
